nais/quizmaster-dev-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: quizmaster
    team: leesah-quiz
  name: quizmaster-for-nais-questions
  namespace: leesah-quiz
spec:
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: leesah-quiz
  - to:
    - ipBlock:
        cidr: 10.6.8.200/32
  podSelector:
    matchLabels:
      app: quizmaster
  policyTypes:
  - Egress
status: {}
